# pyo3avro-rs

./: .gitignore  .pre-commit-config.yaml  .travis.yml  Cargo.toml  LICENSE  Makefile  Pipfile  README.md  setup.py
examples/: example.py
pyo3avro_rs/: __init__.py
scripts/: travis-test.sh
src/: helper.rs  lib.rs
tests/: dummy_test.py  test_dummy.py
